+config de emacs

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 My very own config files, unless otherwise indicated.
+
+2023 may 19: my emacs config explodes, so take the opportunity to write new fancy init.el in literate programmation style.
