--- a/emacs/init.el.org
+++ b/emacs/init.el.org
@@ -1,5 +1,18 @@
 
-Estas configuraciones las saqué de un post del foro de 4lib: https://discourse.cuatrolibertades.org/t/cuatro-libertades-el/26
+#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
+#+options: author:t broken-links:nil c:nil creator:nil
+#+options: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
+#+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
+#+options: timestamp:t title:t toc:t todo:t |:t
+#+title: init.el
+#+date: <2023-05-24 mié>
+#+author: camilo
+#+language: en
+#+select_tags: export
+#+exclude_tags: noexport
+#+creator: Emacs 27.1 (Org mode 9.3)
+
+Este archivo está en desarrollo y actualmente se encuentra MUY desordenado :-/
 
 ** use-package
 
@@ -29,7 +42,8 @@ Estas configuraciones las saqué de un post del foro de 4lib: https://discourse.
  ;; distractores
  '(menu-bar-mode nil)
  '(tool-bar-mode nil)
- '(tooltip-mode nil))
+ '(tooltip-mode nil)
+)
 #+end_src
 
 ** Custom set faces
